# gpsmap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_qt_project.py  muxing.c  run-clang-format.sh
include/gps/: decoder.h  encoder.h  gpx.h  mapgen.h  resources.h  tilemanager.h
include/gpsmap/: encoder.h  gpx.h  json.h  mapgen.h  resources.h  tilemanager.h  utils.h
rsrc/: arrow.kra  flag.kra  pin_finish.kra  pin_start.kra
src/: CMakeLists.txt  decoder.cpp  encoder.cpp  gpx.cpp  json.cpp  main.cpp  map.cpp  mapgen.cpp  resources.cpp  test.cpp  tilemanager.cpp  timecode.cpp  tool.cpp  utils.cpp
